--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="main">
   <span class="fade"></span>
-  <app-navbar *ngIf="!isAdmin"></app-navbar>
+  <app-navbar *ngIf="isGuest"></app-navbar>
   <app-admin-header *ngIf="isAdmin"></app-admin-header>
   <router-outlet></router-outlet>
-  <app-footer *ngIf="!isAdmin"></app-footer>
+  <app-footer *ngIf="isGuest"></app-footer>
 </div>
