--- a/src/app/components/admin/adminHeader/header.component.html
+++ b/src/app/components/admin/adminHeader/header.component.html
@@ -11,6 +11,7 @@
 			<div class="flex items-center space-x-4 text-lg font-semibold tracking-tight">
 				<p>Hello, Max!</p>
 				<button
+					(click)="logout()"
 					class="px-6 py-2 text-white bg-red-700 rounded-lg hover:bg-red-800 hover:ease-in hover:underline"
 					>Sign out</button
 				>
