--- a/src/app/pages/admin/login/login.component.html
+++ b/src/app/pages/admin/login/login.component.html
@@ -1,15 +1,15 @@
 <div class="bg-white p-8 mr-auto ml-auto rounded shadow-md w-1 sm:w-96 text-center">
     <h2 class="text-3xl text-center font-semibold mb-6 text-gray-800">Login</h2>
 
-    <form action="#" method="POST" class="mb-4">
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
         <div class="mb-4">
             <label for="username" class="block text-gray-700 text-sm font-semibold mb-2">Username</label>
-            <input type="text" id="username" name="username" class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500" placeholder="Enter your username" required>
+            <input type="text" formControlName="username" class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500" placeholder="Enter your username">
         </div>
 
         <div class="mb-6">
             <label for="password" class="block text-gray-700 text-sm font-semibold mb-2">Password</label>
-            <input type="password" id="password" name="password" class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500" placeholder="Enter your password" required>
+            <input type="password" formControlName="password" class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500" placeholder="Enter your password">
         </div>
 
         <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded-md w-full hover:bg-blue-600 focus:outline-none focus:bg-blue-600">Login</button>
