--- a/src/app/pages/admin/sections/sections.component.html
+++ b/src/app/pages/admin/sections/sections.component.html
@@ -1,4 +1,5 @@
 <div class="fixed w-full h-full">
     <app-admin-card *ngFor="let section of sections" [config]="getCardConfig(section)"></app-admin-card>
     <app-admin-card [config]="defaultCreateNewCardConfig"></app-admin-card>
+    <app-admin-card [config]="defaultSaveCardConfig"></app-admin-card>
 </div>
