--- a/src/app/components/banners/hero-banner/hero-banner.component.html
+++ b/src/app/components/banners/hero-banner/hero-banner.component.html
@@ -1,9 +1,9 @@
 <section class="hero-banner">
     <div class="hero-contained">
         <div class="hero-title fc-white">
-            <h1 class="ff-damion">Kancelaria Adwokacka</h1>
+            <h1 class="ff-damion">{{ config.title }}</h1>
             <p class="fs-h4 fw-normal">
-                Jesteśmy zespołem doświadczonych adwokatów doświadczonych w prawie studentów i sesjach poprawkowych!
+                {{ config.highlight_text }}
             </p>
             <a href="#about" class="btn-bg2 border-round mt-20">
                 Dowiedz się więcej! <i class="bi bi-chevron-compact-right"></i>
