--- a/src/app/components/banners/sub-hero-banner/sub-hero-banner.component.html
+++ b/src/app/components/banners/sub-hero-banner/sub-hero-banner.component.html
@@ -1,13 +1,13 @@
 <section class="sub-hero-banner" style="background-image: url('assets/art/hero1.webp');">
     <div class="hero-contained">
         <div class="hero-title fc-white">
-            <h1 class="ff-damion">Kancelaria Adwokacka | About Us</h1>
+            <h1 class="ff-damion">{{ config.title }}</h1>
             <a href="index.html" class="fc-white">
                 Home
             </a>
             <i class="bi bi-chevron-right"></i>
             <a href="#" class="fc-white">
-                About Us
+                {{ currentPath }}
             </a>
         </div>
     </div>
