--- a/src/app/components/core/navbar/navbar.component.html
+++ b/src/app/components/core/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav>
     <div class="contained">
         <a href="index.html" class="logo fc-primary ff-damion row flex-alig-center">
-            <span class="fs-h2">{{header}}</span>
+            <span class="fs-h2">{{config.title}}</span>
         </a>
         <input type="checkbox" name="tablet-mobile-menu" class="tab-mob-menu" aria-label="tablet and mobile menu">
         <div class="navigation-container">
