--- a/src/app/pages/admin/home/home.component.html
+++ b/src/app/pages/admin/home/home.component.html
@@ -1,4 +1,5 @@
 <div class="fixed w-full h-full">
     <app-admin-card [config]="getPagesCardConfig()"></app-admin-card>
     <app-admin-card [config]="getInquiriesCardConfig()"></app-admin-card>
+    <app-admin-card [config]="getConfigCardConfig()"></app-admin-card>
 </div>
