--- a/src/app/pages/blog/blog.component.html
+++ b/src/app/pages/blog/blog.component.html
@@ -1,4 +1,4 @@
 <div>
     <app-sub-hero-banner></app-sub-hero-banner>
-    <app-section [config]="[]"></app-section>
+    <app-section [config]="page.sections!"></app-section>
 </div>
