--- a/src/app/components/core/footer/footer.component.html
+++ b/src/app/components/core/footer/footer.component.html
@@ -3,102 +3,44 @@
 
         <!-- FOOTER WEBSITE MOTO START -->
         <div class="col-quad">
-            <h3 class="ff-damion">Roundazzle</h3>
+            <h3 class="ff-damion">{{ config.title }}</h3>
             <p>
-                Our mission is your vision and your mission is to tell
-                us your vision, so that what you envision will become our mission.
-            </p>
-            <p>
-                We are a placeholder text and yes we are aware of that. We have generated self awareness ever since
-                the beginning of time and space.
+             {{config.description}}
             </p>
         </div>
         <!-- FOOTER WEBSITE MOTO END -->
 
         <!-- FOOTER QUICK CONTACT START -->
         <div class="col-quad">
-            <h3 class="ff-damion">Get in touch</h3>
+            <h3 class="ff-damion">Skontaktuj sie z nami</h3>
             <a href="#" class="display-block fc-white icon-link mt-10 mb-10">
                 <i class="bi bi-envelope-fill"></i>
-                nonexistentadd&#64;gmail.com
+                {{config.email}}
             </a>
             <a href="#" class="display-block fc-white icon-link mt-10 mb-10">
                 <i class="bi bi-telephone-fill"></i>
-                +639123456789
+                {{config.phone}}
             </a>
             <a href="#" class="display-block fc-white icon-link mt-10 mb-10">
                 <i class="bi bi-geo-alt-fill"></i>
-                20th street, Dreamland
-            </a>
-            <a href="#" class="display-inblock fc-white icon-link mt-20" aria-label="Follow on facebook">
-                <i class="bi bi-facebook"></i>
-            </a>
-            <a href="#" class="display-inblock fc-white icon-link" aria-label="Follow on instagram">
-                <i class="bi bi-instagram"></i>
-            </a>
-            <a href="#" class="display-inblock fc-white icon-link" aria-label="Follow on twitter">
-                <i class="bi bi-twitter"></i>
-            </a>
-            <a href="#" class="display-inblock fc-white icon-link" aria-label="Follow on youtube">
-                <i class="bi bi-youtube"></i>
+                {{config.address}}
             </a>
         </div>
         <!-- FOOTER QUICK CONTACT END -->
         
-        <!-- FOOTER SCHEDULE START -->
-        <div class="col-quad">
-            <h3 class="ff-damion">Opening hours</h3>
-            <p class="mt-10 mb-10 fw-bold">
-                Monday - Friday:
-                <span class="fw-normal display-block">Closed</span>
-            </p>
-            <p class="mt-10 mb-10 fw-bold">
-                Saturday:
-                <span class="fw-normal display-block">8:00 - 8:01</span>
-            </p>
-            <p class="mt-10 mb-10 fw-bold">
-                Sunday:
-                <span class="fw-normal display-block">10:00 - 10:01</span>
-            </p>
-        </div>
-        <!-- FOOTER SCHEDULE END -->
         
         <!-- FOOTER USEFUL LINKS START -->
         <div class="col-quad">
             <h3 class="ff-damion">Useful Links</h3>
-            <a href="index.html" class="display-block fc-white mt-5 mb-5">
+            <a *ngFor="let page of pages" routerLink="{{page.path}}" class="display-block fc-white mt-5 mb-5">
                 <i class="bi bi-chevron-compact-right"></i>
-                Home
-            </a>
-            <a href="about.html" class="display-block fc-white mt-5 mb-5">
-                <i class="bi bi-chevron-compact-right"></i>
-                About
-            </a>
-            <a href="service.html" class="display-block fc-white mt-5 mb-5">
-                <i class="bi bi-chevron-compact-right"></i>
-                Service
-            </a>
-            <a href="industries.html" class="display-block fc-white mt-5 mb-5">
-                <i class="bi bi-chevron-compact-right"></i>
-                Industries
-            </a>
-            <a href="blog/blog.html" class="display-block fc-white mt-5 mb-5">
-                <i class="bi bi-chevron-compact-right"></i>
-                Blog
-            </a>
-            <a href="career/career.html" class="display-block fc-white mt-5 mb-5">
-                <i class="bi bi-chevron-compact-right"></i>
-                Career
-            </a>
-            <a href="contact.html" class="display-block fc-white mt-5 mb-5">
-                <i class="bi bi-chevron-compact-right"></i>
-                Contact
+                {{page.title}}
             </a>
         </div>
         <!-- FOOTER USEFUL LINKS END -->
         
     </div>
     <div class="copy ta-center fc-white">
-        <small>&copy; Your site - Copyright 2023</small>
+        <small>&copy; {{config.title}} - Copyright 2024</small>
     </div>
 </footer>
